@@ -1,228 +1,159 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <packaging>war</packaging>
-  <parent>
-    <groupId>com.niulbird.clubmgr</groupId>
-    <artifactId>clubmgr</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <artifactId>clubmgr-bfc</artifactId>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <prerequisites>
-    <maven>3.1.0</maven>
-  </prerequisites>
-  <dependencies>
-    <dependency>
-      <groupId>com.niulbird.clubmgr</groupId>
-      <artifactId>clubmgr-data</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.niulbird.clubmgr</groupId>
-      <artifactId>clubmgr-email</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.niulbird.clubmgr</groupId>
-      <artifactId>clubmgr-util</artifactId>
-    </dependency>
-    <!-- Compile/runtime dependencies -->
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>3.0-alpha-1</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>jsp-api</artifactId>
-      <version>2.1</version>
-      <scope>provided</scope>
-    </dependency>
-	<dependency>
-    	<groupId>javax.annotation</groupId>
-    	<artifactId>javax.annotation-api</artifactId>
-    	<version>1.3.2</version>
-	</dependency>
-    <!-- Spring Dependencies -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context-support</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <!-- Spring MVC framework -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-web</artifactId>
-      <version>${spring.security.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-config</artifactId>
-      <version>${spring.security.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-taglibs</artifactId>
-      <version>${spring.security.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjweaver</artifactId>
-      <version>1.8.2</version>
-    </dependency>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.niulbird.clubmgr</groupId>
+        <artifactId>clubmgrnew</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+    <artifactId>clubmgrnew-bfc</artifactId>
+    <name>Bombastic FC Web</name>
 
-    <!-- Tiles -->
-    <dependency>
-      <groupId>org.apache.tiles</groupId>
-      <artifactId>tiles-core</artifactId>
-      <version>${tiles.version}</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.tiles</groupId>
-      <artifactId>tiles-jsp</artifactId>
-      <version>${tiles.version}</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.5</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.14.0</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.niulbird.clubmgr</groupId>
+            <artifactId>clubmgrnew-data</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.niulbird.clubmgr</groupId>
+            <artifactId>clubmgrnew-email</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.niulbird.clubmgr</groupId>
+            <artifactId>clubmgrnew-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<!--dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.16.1</version>
+        </dependency-->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<!--  Test dependencies -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+    		<exclusions>
+            	<exclusion>
+                	<groupId>org.json</groupId>
+                	<artifactId>json</artifactId>
+            	</exclusion>
+        		<exclusion>
+            		<groupId>com.vaadin.external.google</groupId>
+            		<artifactId>android-json</artifactId>
+        		</exclusion>
+    		</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
+		</dependency>
+    </dependencies>
 
-  <build>
-    <!-- for hot reload of the web application -->
-    <!-- outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory -->
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <version>3.8.1</version>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>11</source>
-          <target>11</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.3.1</version>
-        <configuration>
-          <attachClasses>true</attachClasses>
-          <archiveClasses>true</archiveClasses>
-          <webResources>
-            <resource>
-              <directory>${basedir}/src/main/webapp/WEB-INF</directory>
-              <filtering>true</filtering>
-              <targetPath>WEB-INF</targetPath>
-            </resource>
-            <resource>
-              <directory>${basedir}/src/main/resources</directory>
-              <filtering>true</filtering>
-              <targetPath>WEB-INF/classes</targetPath>
-            </resource>
-          </webResources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>nl.geodienstencentrum.maven</groupId>
-        <artifactId>sass-maven-plugin</artifactId>
-        <version>3.7.2</version>
-        <executions>
-          <execution>
-            <id>package</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>update-stylesheets</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <resources>
-            <resource>
-              <source>
-                <directory>${basedir}/src/main/webapp/static/css/scss</directory>
-              </source>
-              <destination>${project.basedir}/src/main/webapp/static/css</destination>
-            </resource>
-          </resources>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.samaxes.maven</groupId>
-        <artifactId>minify-maven-plugin</artifactId>
-        <version>1.7.4</version>
-        <executions>
-          <execution>
-            <id>minify</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>minify</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <cssSourceDir>static/css</cssSourceDir>
-          <cssTargetDir>static/css</cssTargetDir>
-          <cssSourceIncludes>
-            <cssSourceInclude>main.css</cssSourceInclude>
-          </cssSourceIncludes>
-          <cssSourceExcludes>
-            <cssSourceExclude>**/*.min.css</cssSourceExclude>
-          </cssSourceExcludes>
-          <jsSourceDir>static/js</jsSourceDir>
-          <jsTargetDir>static/js</jsTargetDir>
-          <jsSourceIncludes>
-            <jsSourceInclude>**/*.js</jsSourceInclude>
-          </jsSourceIncludes>
-          <jsSourceExcludes>
-            <jsSourceExclude>**/*.min.js</jsSourceExclude>
-          </jsSourceExcludes>
-          <jsTargetDir>static/js</jsTargetDir>
-          <skipMerge>true</skipMerge>
-          <verbose>true</verbose>
-          <webappTargetDir>${basedir}/src/main/webapp</webappTargetDir>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+			<plugin>
+				<groupId>com.samaxes.maven</groupId>
+				<artifactId>minify-maven-plugin</artifactId>
+				<version>1.7.4</version>
+				<executions>
+					<execution>
+						<id>minify</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>minify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<cssSourceDir>static/css</cssSourceDir>
+					<cssTargetDir>static/css</cssTargetDir>
+					<cssSourceIncludes>
+						<cssSourceInclude>main.css</cssSourceInclude>
+					</cssSourceIncludes>
+					<cssSourceExcludes>
+						<cssSourceExclude>**/*.min.css</cssSourceExclude>
+					</cssSourceExcludes>
+					<jsSourceDir>static/js</jsSourceDir>
+					<jsTargetDir>static/js</jsTargetDir>
+					<jsSourceIncludes>
+						<jsSourceInclude>**/*.js</jsSourceInclude>
+					</jsSourceIncludes>
+					<jsSourceExcludes>
+						<jsSourceExclude>**/*.min.js</jsSourceExclude>
+					</jsSourceExcludes>
+					<jsTargetDir>static/js</jsTargetDir>
+					<skipMerge>true</skipMerge>
+					<verbose>true</verbose>
+					<webappTargetDir>${basedir}/src/main/webapp</webappTargetDir>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+				<configuration>
+					<mainClass>com.niulbird.clubmgr.bfc.WebApplication</mainClass>
+					<layout>JAR</layout>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+        </plugins>
+    </build>
+
 </project>
